--- a/chrome/_vars.css
+++ b/chrome/_vars.css
@@ -7,7 +7,7 @@
   --button-size: 32px;
   --icon-size: 24px;
   
-  --chrome-color: #3d4043 !important;
+  --chrome-color: #5a5c61 !important;
   --lwt-text-color: var(--chrome-color) !important;
   --chrome-background-color: #e8eaed !important;
   --chrome-secondary-background-color: #FFF !important;
